.jjconflict-side-0/compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__bools__negation.snap
---
source: compiler-core/src/nix/tests/bools.rs
expression: "pub fn negate(x) {\n    !x\n}"
---
let negate = x: !x; in { inherit negate; }
