.jjconflict-side-0/compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__bools__nil_case.snap
---
source: compiler-core/src/nix/tests/bools.rs
expression: "\nfn go(a) {\n  case a {\n    Nil -> 0\n  }\n}\n"
---
let go = a: 0; in { }
