.jjconflict-side-0/compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__bools__operators.snap
---
source: compiler-core/src/nix/tests/bools.rs
expression: "\nfn go() {\n    True && True\n    False || False\n}\n"
---
let go = { }: let _' = true && true; in builtins.seq _' (false || false); in { }
