.jjconflict-side-0/compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__bools__shadowed_bools_and_nil.snap
---
source: compiler-core/src/nix/tests/bools.rs
expression: "\npub type True { True False Nil }\nfn go(x, y) {\n  let assert True = x\n  let assert False = x\n  let assert Nil = y\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) makeError seqAll;
  
  True = { __gleamTag = "True"; };
  
  False = { __gleamTag = "False"; };
  
  Nil = { __gleamTag = "Nil"; };
  
  go =
    x: y:
    let
      _assert' =
        if x.__gleamTag != "True" then
          builtins.throw
            (makeError
              "assignment_no_match"
              "my/mod"
              4
              "go"
              "Assignment pattern did not match"
              { value = x; })
        else null;
      _' = builtins.seq _assert' x;
      _assert''1 =
        if x.__gleamTag != "False" then
          builtins.throw
            (makeError
              "assignment_no_match"
              "my/mod"
              5
              "go"
              "Assignment pattern did not match"
              { value = x; })
        else null;
      _'1 = builtins.seq _assert''1 x;
    in
    seqAll
      [ _' _assert' _'1 _assert''1 ]
      (if y.__gleamTag != "Nil" then
        builtins.throw
          (makeError
            "assignment_no_match"
            "my/mod"
            6
            "go"
            "Assignment pattern did not match"
            { value = y; })
      else y);
in
{ inherit True False Nil; }
